route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: server
  name: nginx-route
spec:
  host: nginx-edu24.apps.211-34-231-82.nip.io
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: mynginx
    weight: 100
  wildcardPolicy: None
